--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "color-waterfall",
+  "homepage" : "http://thomasoniii.github.io/color-waterfall",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,5 +16,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
