--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-waterfall",
-  "homepage" : "http://thomasoniii.github.io/color-waterfall",
+  "homepage" : "https://thomasoniii.github.io/color-waterfall",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
